# CraftPlanner

./: .gitignore  CHANGELOG.md  NOTICE.md  README.md  RELEASE.md  index.html  package-lock.json  package.json  vite.config.ts
public/data/curated/: catalog_overrides.json  item_exclusions.json  recipe_exclusions.json
scripts/: audit-parser.ts  deduplicate-images.mjs  generate-latest-json.mjs  smoke.mjs  sync-item-sets.mjs  verify-images.mjs
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/data/: curated.ts  repository.ts  storage.ts  sync.ts
src/domain/: catalog.ts  craft.ts  possession.ts  selection.ts  types.ts
tests/: domain.test.ts
